-fix the overlapping problem of progress bar and caption container -fix the problem of oversizing caption container when changing window size -fit the media player with the size of caption container when changing window size -adding these changes to new css files while keeping the original css files to avoid affecting CT player used elsewhere. Switch these css by comment in respective index.js

--- a/src/screens/Watch/Components/LivePlayerFooter/index.css
+++ b/src/screens/Watch/Components/LivePlayerFooter/index.css
@@ -1,5 +1,5 @@
 .footer {
-    position: relative;
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
